<resources>
    <string name="app_name">Medtime</string>
    <!-- MainActivity Resources -->
    <string name="title"><u>Medtime</u></string>
    <string name="medicine_name">Medicine Name:</string>
    <string name="time_of_the_day">Time of The Day:</string>
    <string name="date">Date:</string>
    <string name="about_us">About Us</string>
    <string name="insert">Insert</string>
    <string name="dateFormat">Format: dd/mm/yy</string>
    <string name="insert_data">Insert Data</string>
    <string name="show_data">Show Data</string>
    <string name="aboutUSText">We are 3rd year student of T.John Institute of Technology, pursuing Computer Science and Engineering.</string>
    <string name="okText">OK</string>
    <string name="dialog_about_us"><b>About US</b></string>
</resources>