<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bg"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="184dp"
        android:layout_height="51dp"
        android:layout_marginStart="-15dp"
        android:text="@string/time_of_the_day"
        android:textColor="@color/labelClr"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.491"
        android:focusable="true" />

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="184dp"
        android:layout_height="51dp"
        android:layout_marginStart="-15dp"
        android:text="@string/date"
        android:hint="@string/dateFormat"
        android:textColor="@color/labelClr"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
        app:layout_constraintBottom_toTopOf="@+id/timeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medLabel" />

    <TextView
        android:id="@+id/textView"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/title"
        android:textColor="@color/titleClr"
        android:textSize="45sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <TextView
        android:id="@+id/medLabel"
        android:layout_width="184dp"
        android:layout_height="51dp"
        android:layout_marginStart="-15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
        android:text="@string/medicine_name"
        android:textAlignment="viewStart"
        android:textColor="@color/labelClr"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344" />

    <EditText
        android:id="@+id/med"
        android:layout_width="184dp"
        android:layout_height="51dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/textinputborder"
        android:inputType="text"
        android:singleLine="false"
        android:textAlignment="center"
        android:textColor="@color/inputClr"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/dateLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.819" />

    <EditText
        android:id="@+id/date"
        android:textColorHint="#323232"
        android:layout_width="184dp"
        android:layout_height="51dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/textinputborder"
        android:focusable="true"
        android:inputType="date"
        android:textAlignment="center"
        android:textColor="@color/inputClr"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@+id/dateLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.953" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateFormat"
        android:textAlignment="center"
        android:textColor="@color/hintDate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.488" />

    <Spinner
        android:id="@+id/list"
        android:layout_width="184dp"
        android:layout_height="51dp"
        android:spinnerMode="dropdown"
        android:textSize="23sp"
        android:textAlignment="center"
        android:layout_marginEnd="12dp"
        android:background="@drawable/textinputborder"
        app:layout_constraintBottom_toBottomOf="@+id/timeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.972" />

    <Button
        android:id="@+id/insertBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:layout_marginBottom="128dp"
        android:background="@color/titleClr"
        android:text="@string/insert"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>